--- a/figures/04_temp_comp_figures.Rmd
+++ b/figures/04_temp_comp_figures.Rmd
@@ -57,17 +57,19 @@ biomass_valid <- chamber_biomass %>%
            light == 250 &
            !is.na(stem_DW_mg) &
            !is.na(leaf_DW_mg) &
-           !is.na(panicle_DW_mg)) %>%
+           !is.na(panicle_DW_mg) &
+           !is.na(root_DW_mg)) %>%
   rename(plant_id = plantID) %>%
   mutate(location = case_when(temp == "31/22" ~ "rn", 
                               temp == "31/31" ~ "hn"),
          stem_DW_g = ud.convert(stem_DW_mg, "mg", "g"),
          leaf_DW_g = ud.convert(leaf_DW_mg, "mg", "g"),
-         panicle_DW_g = ud.convert(panicle_DW_mg, "mg", "g")) %>%
+         panicle_DW_g = ud.convert(panicle_DW_mg, "mg", "g"),
+         root_DW_g = ud.convert(root_DW_mg, "mg", "g")) %>%
   dplyr::select(location, plant_id, sowing_date, transplant_date, harvest_date,
-         stem_DW_g, leaf_DW_g, panicle_DW_g) %>%
+         stem_DW_g, leaf_DW_g, panicle_DW_g, root_DW_g) %>%
   rename(treatment = location) %>%
-  mutate(total_biomass_kg_m2 = ud.convert((stem_DW_g + leaf_DW_g + panicle_DW_g)/103,
+  mutate(total_biomass_kg_m2 = ud.convert((stem_DW_g + leaf_DW_g + panicle_DW_g + root_DW_g)/103,
                                           "g/cm2", "kg/m2"),
          day = difftime(harvest_date, sowing_date, units = "days"),
          Trait = "Biomass~(kg~m^-2)",
